ported to soc branding, downgraded tests to Java 8